# qt-labs

./: README.md  StampModel.hpp
lab1/: Calc.pro  Calculator.h  main.cpp  mainwindow.cpp  mainwindow.h
lab2/: CMakeLists.txt  DialogDelegate.h  ImageDelegate.h  PhilatelyModel.h  StampDialog.h  StampModel.h  lab2qt.pro  main.cpp  mainwindow.h
lab3/: AddStampDialog.qml  StampEditDialog.qml  StampItemDelegate.qml  StampList.h  StampModel.hpp  main.cpp  main.qml  qml.qrc
lab4/: AddOrEditStampDialog.qml  StampList.h  lab4.pro  main.cpp  main.qml  qml.qrc
